[package]
name = "thisthat"
authors = ["Tim McNamara <tim@mcnamara.nz>"]
description = "Data conversion utility"
version = "0.1.0"
edition = "2021"
license = "BlueOak-1.0.0"
license-file = "LICENSE.md"
categories = ["command-line-utilities"]
repository = "https://github.com/timClicks/thisthat/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rmp = "0.8"
rmp-serde = "1.1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde-pickle = "1.0"
serde-transcode = "1"
toml = "0.5"

# TODO: a proper CLI
# clap = "3"

 # TODO: these crates doesn't expose Serializer as easily as they could
# bson = "2"
# postcard =  { version = "1", features = ["alloc"] }
# ciborium = "0.2"

[[bin]]
name = "tt"
path = "src/main.rs"